# muscr

./: .gitignore  README.md
etc/: sample.muscr
muscr/doc/: muscr_0.1.0.md
muscr/etc/: sample.muscr  sample_leadsheet.muscr  sample_leadsheet_property.muscr  sample_leadsheet_section.muscr  sample_property.muscr  sample_property_error_0.muscr  sample_property_error_1.muscr  sample_property_error_2.muscr
muscr/include/: division_ratio.h  muscr_to_ljs_conversion.h  parser.h  token_id.h  utility.h
muscr/include/generator/: leadsheet_js_duration.h  leadsheet_js_song.h  leadsheet_js_song_attr.h
muscr/include/parser/: leadsheet_staff.h  leadsheet_staff_attr.h  muscr_leadsheet.h  muscr_leadsheet_staff.h  muscr_property.h  muscr_property_attr.h  muscr_section.h  section.h  section_attr.h
muscr/include/range/: midi_note.h  pitch.h  transform.h
muscr/test/: CMakeLists.txt  division_ratio_test.cpp  muscr_to_ljs_conversion_test.cpp
muscr/test/generator/: leadsheet_js_duration_test.cpp  leadsheet_js_song_test.cpp
muscr/test/parser/: leadsheet_attr_test.cpp  leadsheet_property_test.cpp  leadsheet_score_test.cpp  leadsheet_section_test.cpp  leadsheet_staff_test.cpp  leadsheet_test.cpp  lex_test.cpp  parser_test.cpp  qi_test.cpp
muscr/test/range/: midi_note_test.cpp  pitch_test.cpp  transform_test.cpp
